--- a/index.html
+++ b/index.html
@@ -25,47 +25,65 @@
     </header>
     <main class="projetos">
       <ul class="projetos-titulo">Projetos</ul>
-      <li><a href="https://codepen.io/bia_iglesias/pen/vYWoYWR">🪙 Conversor de Moedas </a>
-      <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="vYWoYWR" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-        <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/vYWoYWR">
-            Conversor de moedas - ID3</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-      </li>
-      <li>
-        <a href="https://codepen.io/bia_iglesias/pen/LYeVXBw">🎬 AluraFlix</p>
-        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="LYeVXBw" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/LYeVXBw">
-              Aluraflix - dia 5</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+      <li><a target="_blank" href="https://codepen.io/bia_iglesias/pen/vYWoYWR">🪙 Conversor de Moedas </a>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="vYWoYWR" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/vYWoYWR">
+              Conversor de moedas - ID3</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
             on <a href="https://codepen.io">CodePen</a>.</span>
         </p>
         <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
+      <li>
+        <a target="_blank" href="https://codepen.io/bia_iglesias/pen/LYeVXBw">🎬 AluraFlix</p>
+          <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="LYeVXBw" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/LYeVXBw">
+                Aluraflix - dia 5</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      </li>
 
-      <li><a href="https://codepen.io/bia_iglesias/pen/KKZdBym">🏆 Tabela de Classificação</a>
+      <li><a target="_blank" href="https://codepen.io/bia_iglesias/pen/KKZdBym">🏆 Tabela de Classificação</a>
         <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="KKZdBym" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/KKZdBym">
-  Tabela de classificação</a> by Beatriz Iglesias  (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/KKZdBym">
+              Tabela de classificação</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
-      <li><a href="https://codepen.io/bia_iglesias/pen/NWXNdQR">🃏 Supertrunfo</a>
+      <li><a target="_blank" href="https://codepen.io/bia_iglesias/pen/NWXNdQR">🃏 Supertrunfo</a>
         <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="NWXNdQR" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/NWXNdQR">
-  Super Trunfo - Dia 8</a> by Beatriz Iglesias  (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/NWXNdQR">
+              Super Trunfo - Dia 8</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
-      <li><a href="https://codepen.io/bia_iglesias/pen/zYpBKqW?editors=1100">✔️ Certificard</a>
+      <li>
+        <a target="_blank" href="" https://codepen.io/bia_iglesias/pen/VwyZgjO>🔮 Mentalista</a>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="VwyZgjO" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/VwyZgjO">
+              Mentalista - ID3</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      </li>
+      <li>
+        <a target="_blank" href="https://codepen.io/bia_iglesias/pen/WNXBmJb">➗ Calculadora de Média</a>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="WNXBmJb" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/WNXBmJb">
+              Calculadora de média</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      </li>
+      <li><a target="_blank" href="https://codepen.io/bia_iglesias/pen/zYpBKqW?editors=1100">✔️ Certificard</a>
         <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="zYpBKqW" data-user="bia_iglesias" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/zYpBKqW">
-  Portfólio</a> by Beatriz Iglesias  (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <span>See the Pen <a href="https://codepen.io/bia_iglesias/pen/zYpBKqW">
+              Portfólio</a> by Beatriz Iglesias (<a href="https://codepen.io/bia_iglesias">@bia_iglesias</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       </li>
     </main>
   </div>
